# StorageManagement

./: .gitignore  README.md  StorageManagement.sln  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
StorageManagement/: Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Program.cs  StorageManagement.csproj
docs/superpowers/plans/: 2026-03-11-greek-translation.md  2026-03-11-quick-barcode-color-rules.md  2026-03-12-backup-restore.md  2026-03-12-enhanced-stock-table.md
docs/superpowers/specs/: 2026-03-11-greek-translation-design.md  2026-03-11-quick-barcode-color-rules-design.md  2026-03-12-backup-restore-design.md  2026-03-12-enhanced-stock-table-design.md
legacy/dotnet/StorageManagement/: Form1.resx  Form3.cs  Form3.resx  StorageManagement.csproj
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/activity/: ActivityTable.tsx  columns.tsx
src/components/barcode/: BarcodeActionButton.tsx  BarcodeActionDialog.tsx
src/components/dashboard/: KpiCards.tsx  (+3 more)
src/hooks/: useActivity.ts  useBackupScheduler.ts  useBackupSettings.ts  useColorRules.ts  useDashboard.ts  useInventory.ts  useLocations.ts  useReport.ts
src/lib/: activity.ts  analytics.ts  backup.ts  color-rules.ts  csv-import.ts  db.ts  export.ts  inventory.ts  locations.ts  reports.ts  schema.ts  settings.ts  utils.ts
src/pages/: DashboardPage.tsx  LogPage.tsx  ReportsPage.tsx  ScanPage.tsx  SettingsPage.tsx  StockPage.tsx
(+22 files in other folders)
