[package]
name = "storage-management"
version = "0.1.0"
description = "StorageManagement"
authors = ["you"]
edition = "2021"

[lib]
name = "storage_management_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
